WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
171062
Inline anchor elements cannot be dragged when starting the drag from a block descendant
https://bugs.webkit.org/show_bug.cgi?id=171062
Summary
Inline anchor elements cannot be dragged when starting the drag from a block ...
Wenson Hsieh
Reported
2017-04-20 10:34:37 PDT
1. Go to data:text/html,<a href="
https://www.w3.org
"><div style="display: inline">I am inline</div><div style="display: block">I am block</div></a> 2. Try to drag the link starting from the part that says 'I am block' 3. Observe that the link is not draggable However, dragging from the part that says 'I am inline' works. Note: also reproduces on Chrome Canary (60.0.3076.0)
Attachments
Patch
(7.06 KB, patch)
2017-04-20 12:31 PDT
,
Wenson Hsieh
thorton
: review+
Details
Formatted Diff
Diff
Patch for landing
(7.02 KB, patch)
2017-04-20 14:13 PDT
,
Wenson Hsieh
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2017-04-20 10:35:20 PDT
<
rdar://problem/31697835
>
Wenson Hsieh
Comment 2
2017-04-20 12:31:37 PDT
Created
attachment 307614
[details]
Patch
Wenson Hsieh
Comment 3
2017-04-20 14:13:40 PDT
Created
attachment 307635
[details]
Patch for landing
WebKit Commit Bot
Comment 4
2017-04-20 15:05:55 PDT
The commit-queue encountered the following flaky tests while processing
attachment 307635
[details]
: imported/w3c/web-platform-tests/WebCryptoAPI/sign_verify/ecdsa.worker.html
bug 171080
(author:
jiewen_tan@apple.com
) The commit-queue is continuing to process your patch.
WebKit Commit Bot
Comment 5
2017-04-20 15:06:28 PDT
Comment on
attachment 307635
[details]
Patch for landing Clearing flags on attachment: 307635 Committed
r215581
: <
http://trac.webkit.org/changeset/215581
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug